# bacpipe

./: .gitignore  .readthedocs.yml  README.md  benchmark.py  birdnet_resave_as_keras.py  config.yaml  generate_anomalous_data.py  interactive_plot.py  interactive_plot_old.py  load_clusterings.py  pyproject.toml  requirements.txt  requirements102024.txt  requirements_mac.txt  requirements_windows.txt  run_dashboard.py  run_explore.py  run_pipeline.py  setup.py  setup.sh  test_embedding_creation.py  test_ground_truth.py  testing_api.py
.github/workflows/: github_actions.yaml  main.yml  requirements-cpu-ci.txt
bacpipe/: __init__.py  check_embeddings.py  config.yaml  generate_embeddings.py  helpers.py  main.py  main_utils.py  path_settings.yaml  settings.yaml  testing.py  umap_embed.py  visualize.py  visualize_umaps.py
bacpipe/animal2vec_nn/nn/: __init__.py  audio_tasks.py  audio_train_routine.py  criterions.py  data2vec2.py  utils.py  wav2vec2.py
bacpipe/core/: audio_processor.py  constants.py  experiment_manager.py  workflows.py
bacpipe/embedding_evaluation/: README.md  benchmark.py  label_embeddings.py
bacpipe/embedding_evaluation/classification/: classify.py  evaluate_classifcation_results.py  evaluate_classifier.py  load_data.py  main_classify.py  train_classifier.py
bacpipe/embedding_evaluation/clustering/: cluster.py  cluster_embeddings.py
bacpipe/embedding_evaluation/probing/: dataset_probe.py  evaluate_probe.py  inference_probe.py  probe.py  train_probe.py
bacpipe/embedding_evaluation/visualization/: dashboard.py  dashboard_utils.py  tooltips.py  visualize.py  visualize_embeddings.py  visualize_predictions.py  visualize_spectrograms.py
bacpipe/embedding_generation_pipelines/: README.md  utils.py
bacpipe/embedding_generation_pipelines/dimensionality_reduction/: dim_reduction_utils.py  pca.py  t_sne.py  umap.py
bacpipe/embedding_generation_pipelines/feature_extractors/: animal2vec_mk.py  audiomae.py  audioprotopnet.py  aves_especies.py  avesecho_passt.py  bat.py  batdetect2.py  batdetect2_mean_clip.py  batdetect2_mean_detections.py  beats.py  biolingual.py  birdmae.py  birdnet.py  birdnetAugLinClf.py  birdnetAugPeriodTS.py  birdnetAugTS.py  birdnetTS.py  convnext_birdset.py  google_whale.py  hbdet.py  insect459.py  mix2.py  naturebeats.py  naturelm_audio.py  perch_bird.py  perch_v2.py  protoclr.py  rcl_fs_bsed.py  surfperch.py  vggish.py
bacpipe/evaluation/: README.md  classification.py  clustering.py  visualization.py
bacpipe/evaluation/classification_utils/: embedding_dataloader.py  evaluation_metrics.py  linear_probe.py
bacpipe/evaluation/datasets/: README.md
bacpipe/evaluation/dim_reduced_embeddings/: README.md
bacpipe/evaluation/embeddings/: README.md
bacpipe/evaluation/evaluation_utils/: embedding_dataloader.py  evaluation_metrics.py  (+2 more)
bacpipe/examples/: bacpipe_tutorial.ipynb  embedding evaluation.ipynb  simple use cases.ipynb  using custom models.ipynb
bacpipe/model_pipelines/: README.md  model_utils.py  runner.py
bacpipe/pipelines/: README.md  animal2vec.py  animal2vec_mk.py  animal2vec_xc.py  audiomae.py  aves.py  aves_especies.py  avesecho_passt.py  biolingual.py  birdaves.py  birdnet.py  echopasst.py  hbdet.py  insect459.py  insect66.py  mix2.py  pca.py  perch.py  perch_bird.py  protoclr.py  rcl_fs_bsed.py  sparse_pca.py  surfperch.py  t_sne.py  umap.py  utils.py  vggish.py  whaleperch.py
bacpipe/tests/: conftest.py  test_embedding_creation.py  test_evaluation.py  test_linear_probing.py  test_reducing_dimensions.py
bacpipe/visualization/: visualization.py
datasets/embedding_test_files/: 354_24954_howl_st_5_min_52s_avesecho_passt.npy  354_24954_howl_st_6_min_39s_avesecho_passt.npy  354_24984_howl_st_1_min_03s_avesecho_passt.npy  354_24986_howl_st_0_min_24s_avesecho_passt.npy  354_24986_howl_st_2_min_08s_avesecho_passt.npy  354_24990_howl_st_0_min_51s_avesecho_passt.npy  M_ENCI3_MERGELHOOF_20211028_191902_avesecho_passt.npy  M_ENCI3_MERGELHOOF_20211114_225202a_avesecho_passt.npy  M_ENCI3_MERGELHOOF_20211128_003702_avesecho_passt.npy  M_ENCI3_MERGELHOOF_20211222_193402a_avesecho_passt.npy  bout_1043_location_17_avesecho_passt.npy  bout_1048_location_17_avesecho_passt.npy  bout_1069_location_17_avesecho_passt.npy  bout_1080_location_17_avesecho_passt.npy  bout_254_location_2_avesecho_passt.npy  bout_263_location_2_avesecho_passt.npy  bout_275_location_2_avesecho_passt.npy  bout_296_location_2_avesecho_passt.npy  bout_322_location_2_avesecho_passt.npy  bout_395_location_5_avesecho_passt.npy  bout_396_location_5_avesecho_passt.npy  bout_397_location_5_avesecho_passt.npy  bout_434_location_5_avesecho_passt.npy  bout_435_location_5_avesecho_passt.npy  bout_446_location_5_avesecho_passt.npy  cutted_day1_PC1107_0190_avesecho_passt.npy  cutted_day1_PC1107_0412_avesecho_passt.npy  cutted_day1_PC1107_0516_avesecho_passt.npy  cutted_day1_PC1107_0692_avesecho_passt.npy  littleowl2017fg_test_DUB_0008_avesecho_passt.npy  littleowl2017fg_test_DUB_0020_avesecho_passt.npy  littleowl2017fg_train_DUB_0009_avesecho_passt.npy  littleowl2017fg_train_DUB_0017_avesecho_passt.npy  metadata.yml  pipit2017fg_test_0712_0007_avesecho_passt.npy  pipit2017fg_test_1611_0002_avesecho_passt.npy  pipit2017fg_test_1611_0023_avesecho_passt.npy  pipit2017fg_train_0712_0020_avesecho_passt.npy  pipit2017fg_train_0712_0026_avesecho_passt.npy  pipit2017fg_train_0712_0035_avesecho_passt.npy  (+7 more)
docs/source/: api_reference.rst  conf.py  index.rst  submodules.rst
exploration/: explore_dashboard.py  explore_embeds.py
results/dim_reduced_embeddings/: README.md
results/embeddings/: README.md
src/: btn_icon.py
tests/: test_embedding_creation.py
(+436 files in other folders)
