[project]
name = "bacpipe"
version = "1.1.2"
description = "Use bacpipe to streamline the process of generating embeddings and analysing your PAM datasets."
readme = "README.md"
authors = [
    { name = "Vincent S. Kather", email = "vkather@gmail.com" }
]
requires-python = ">=3.11"

# ✅ Keep only CPU-safe, cross-platform dependencies here
dependencies = [
    "absl-py==2.3.1",
    "anyio==4.10.0",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "bleach==6.2.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "chex==0.1.90",
    "click==8.2.1",
    "cloudpickle==2.2.1",
    "contourpy==1.3.3",
    "crcmod==1.7",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "dill==0.3.1.1",
    "dnspython==2.7.0",
    "docopt==0.6.2",
    "einops==0.8.0",
    "etils==1.13.0",
    "fastavro==1.12.0",
    "fasteners==0.20",
    "filelock==3.19.1",
    "flatbuffers==25.2.10",
    "flax==0.10.0",
    "fonttools==4.59.2",
    "fsspec==2025.9.0",
    "gast==0.6.0",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-pasta==0.2.0",
    "grpcio==1.65.5",
    "h11==0.16.0",
    "h5py==3.14.0",
    "hear21passt==0.0.26",
    "hf-xet==1.1.9",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.27.0",
    "huggingface-hub==0.34.4",
    "humanize==4.13.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jax==0.4.33",         # CPU JAX
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonpickle==3.3.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "kagglehub==0.3.13",
    "keras==3.11.0",       # CPU keras (will use CPU TensorFlow below if installed separately)
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "librosa==0.10.2.post1",
    "llvmlite==0.44.0",
    "markdown==3.9",
    "matplotlib==3.10.6",
    "ml-collections==0.1.0",
    "ml-dtypes==0.5.3",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==1.26.4",
    "opt-einsum==3.4.0",
    "optax==0.2.3",
    "orbax-checkpoint==0.6.4",
    "orjson==3.10.7",
    "packaging==25.0",
    "pandas==2.2.3",
    "panel==1.6.2",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "pooch==1.8.2",
    "protobuf==6.32.1",
    "pyarrow==16.1.0",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.3",
    "scikit-learn==1.7.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "soundfile==0.12.1",
    "tensorstore==0.1.74",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "timm==1.0.11",
    "tokenizers==0.22.0",
    "toolz==1.0.0",
    "torch==2.6",          # CPU PyTorch wheel will be pulled
    "torchaudio==2.6",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.56.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "umap-learn==0.5.9.post2",
    "urllib3==2.5.0",
    "uvicorn==0.23.2",
    "werkzeug==3.1.3",
    "zipp==3.23.0",
]

[project.optional-dependencies]
gpu = [
    "jaxlib==0.4.33+cuda12.cudnn89", # pick appropriate wheel if needed
    "tensorflow==2.20.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-hub==0.16.0",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "triton==3.2.0",
]
